// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main renders correctly 1`] = `
<div
  className="columns is-marginless"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="column is-one-quarter"
    style={
      Object {
        "backgroundColor": "#2b3e50",
      }
    }
  >
    <Sidebar />
  </div>
  <div
    className="column"
  >
    <Connect(CreateWallet) />
  </div>
</div>
`;

exports[`Main renders correctly 2`] = `
<div
  className="columns is-marginless"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="column is-one-quarter"
    style={
      Object {
        "backgroundColor": "#2b3e50",
      }
    }
  >
    <Sidebar />
  </div>
  <div
    className="column"
  >
    <ConnectionSettings />
  </div>
</div>
`;

exports[`Main renders correctly 3`] = `
<div
  className="columns is-marginless"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="column is-one-quarter"
    style={
      Object {
        "backgroundColor": "#2b3e50",
      }
    }
  >
    <Sidebar />
  </div>
  <div
    className="column"
  >
    <Connect(AccountPage) />
  </div>
</div>
`;

exports[`Main renders correctly 4`] = `
<div
  className="columns is-marginless"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="column is-one-quarter"
    style={
      Object {
        "backgroundColor": "#2b3e50",
      }
    }
  >
    <Sidebar />
  </div>
  <div
    className="column"
  >
    <Payee />
  </div>
</div>
`;
